add first-screen, price, calculate blocks

--- a/src/style/partials/_var.scss
+++ b/src/style/partials/_var.scss
@@ -4,6 +4,10 @@ $mainFont: 'Montserrat', sans-serif;
 // Colors
 $white: #FFF;
 $black: #000;
+$red: #e82c32;
+$text-color: #373742;
+$gray-e6: #e6e6e6;
+$gray-cb: #cbcbd9;
 
 // Breakpoints
 $tMin: 768px;
