--- a/src/style/partials/components.scss
+++ b/src/style/partials/components.scss
@@ -1,1 +1,101 @@
+.button {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 330px;
+	min-height: 45px;
+	background-color: $red;
+	border-radius: 23px;
+	font-size: 16px;
+	line-height: 32px;
+	color: $white;
+	cursor: pointer;
 
+	svg {
+		margin-right: 6px;
+	}
+}
+
+.title {
+	font-size: 36px;
+	line-height: 52px;
+	font-weight: bold;
+	text-transform: uppercase;
+	position: relative;
+	padding-bottom: 4px;
+
+	&::after {
+		content: '';
+		display: block;
+		width: 100px;
+		height: 4px;
+		position: absolute;
+		left: 0;
+		bottom: 0;
+		background-color: $red;
+		margin-top: 5px;
+	}
+}
+
+.text-label {
+	span {
+		font-size: 14px;
+		line-height: 24px;
+		color: #9b9bb3;
+	}
+
+	input {
+		width: 100%;
+		height: 40px;
+		box-shadow: inset 0 2px 2px rgba(0, 0, 0, 0.1);
+		border-radius: 5px;
+		border: 1px solid $gray-cb;
+		background-color: $white;
+		font-size: 16px;
+		line-height: 42px;
+		box-sizing: border-box;
+		padding: 0 15px;
+	}
+}
+
+.checkbox-label {
+	display: inline-flex;
+	align-items: center;
+	cursor: pointer;
+
+	.checkbox-outer {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		width: 25px;
+		height: 25px;
+		box-shadow: inset 0 2px 2px rgba(0, 0, 0, 0.1);
+		border-radius: 4px;
+		border: 1px solid $gray-cb;
+		background-color: $white;
+		margin-right: 10px;
+
+		svg {
+			display: none;
+		}
+	}
+
+	input {
+		display: none;
+
+		&:checked + .checkbox-outer {
+			border-color: $red;
+
+			svg {
+				display: block;
+				width: 100%;
+				height: 100%;
+			}
+		}
+	}
+
+	span {
+		font-size: 14px;
+		line-height: 25px;
+	}
+}
