--- a/src/style/partials/fonts.css
+++ b/src/style/partials/fonts.css
@@ -16,8 +16,8 @@
 
 @font-face {
     font-family: 'Montserrat';
-    src: url('../fonts/Montserrat-Bold.ttf') format('truetype');
-    font-weight: 700;
+    src: url('../fonts/Montserrat-SemiBold.ttf') format('truetype');
+    font-weight: 600;
     font-style: normal;
     font-display: swap;
 }
