--- a/src/style/partials/_var.scss
+++ b/src/style/partials/_var.scss
@@ -8,6 +8,9 @@ $red: #e82c32;
 $text-color: #373742;
 $gray-e6: #e6e6e6;
 $gray-cb: #cbcbd9;
+$gray-e9: #e9e9f4;
+$gray-9b: #9b9bb3;
+$gray-40: #40404a;
 
 // Breakpoints
 $tMin: 768px;
