--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -8,4 +8,5 @@
 @import "partials/_var";
 @import "partials/main";
 @import "partials/components";
+@import "partials/footer";
 @import "pages/index";
