--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -43,7 +43,7 @@ block main
 								.price__tab.price__tab--active Из Москвы
 								.price__tab Из Санкт-Петербурга
 							.price__tab-content-wrapper
-								.price__tab-content
+								.price__tab-content(style='display: block;')
 									table.price__table
 										thead
 											tr
@@ -224,7 +224,7 @@ block main
 								.price__tab.price__tab--active Из Москвы
 								.price__tab Из Санкт-Петербурга
 							.price__tab-content-wrapper
-								.price__tab-content
+								.price__tab-content(style='display: block;')
 									table.price__table
 										thead
 											tr
