--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -8,5 +8,6 @@
 @import "partials/_var";
 @import "partials/main";
 @import "partials/components";
+@import "partials/_header";
 @import "partials/footer";
 @import "pages/index";
