--- a/src/style/pages/index.scss
+++ b/src/style/pages/index.scss
@@ -3,28 +3,45 @@
 	background: linear-gradient(90deg, rgba(#1a1920, 0.7), rgba(#fff, 0.2)),
 							url('../img/bg-1.jpg');
 	background-size: cover;
-	margin-top: 100px;
 
 	&__container {
-		padding: 150px 0 74px;
+		padding: 70px 0 44px;
 		color: $white;
 		position: relative;
+
+		@media (min-width: $dMin) {
+			padding: 150px 0 74px;
+		}
 	}
 
 	&__wrapper {
-		max-width: 690px;
-		margin-bottom: 170px;
+		margin-bottom: 60px;
+
+		@media (min-width: $dMin) {
+			max-width: 690px;
+			margin-bottom: 170px;
+		}
 	}
 
 	&__title {
-		font-size: 36px;
-		line-height: 55px;
+		font-size: 26px;
+		line-height: 40px;
 		text-transform: uppercase;
 
+		@media (min-width: $dMin) {
+			font-size: 36px;
+			line-height: 55px;
+		}
+
 		span {
-			font-size: 44px;
+			font-size: 32px;
 			font-weight: bold;
 			line-height: 48px;
+
+			@media (min-width: $dMin) {
+				font-size: 44px;
+				line-height: 48px;
+			}
 		}
 	}
 
@@ -33,13 +50,21 @@
 	}
 
 	&__list-item {
-		font-size: 24px;
+		font-size: 18px;
 		line-height: 32px;
 		position: relative;
 		padding-left: 36px;
 
+		@media (min-width: $dMin) {
+			font-size: 24px;
+		}
+
 		&:not(:last-child) {
-			margin-bottom: 18px;
+			margin-bottom: 10px;
+
+			@media (min-width: $dMin) {
+				margin-bottom: 18px;
+			}
 		}
 
 		&::before {
@@ -55,9 +80,15 @@
 	}
 
 	&__button {
+		width: 100%;
 		height: 62px;
 		border-radius: 31px;
-		font-size: 20px;
+		font-size: 16px;
+
+		@media (min-width: $dMin) {
+			width: 330px;
+			font-size: 20px;
+		}
 
 		svg {
 			width: 30px;
@@ -75,10 +106,14 @@
 		border: 2px solid #fff;
 		border-radius: 50%;
 		position: absolute;
-		bottom: 70px;
+		bottom: 20px;
 		left: 50%;
 		transform: translateX(-50%);
 		cursor: pointer;
+
+		@media (min-width: $dMin) {
+			bottom: 70px;
+		}
 
 		svg {
 			width: 24px;
@@ -93,19 +128,6 @@
 
 	&__accordion {
 		margin-top: 23px;
-	}
-
-	&__accordion-item {
-		+ .price__accordion-item {
-			&::before {
-				content: '';
-				display: block;
-				width: 100%;
-				height: 1px;
-				background-color: $gray-e6;
-				margin: 18px 0;
-			}
-		}
 	}
 
 	&__accordion-title {
@@ -137,6 +159,15 @@
 	&__accordion-content {
 		display: none;
 		margin-top: 12px;
+
+		&::after {
+			content: '';
+			display: block;
+			width: 100%;
+			height: 1px;
+			background-color: $gray-e6;
+			margin: 18px 0;
+		}
 	}
 
 	&__note {
@@ -173,11 +204,13 @@
 	&__tab-content {
 		display: none;
 		margin-top: 6px;
+		overflow-x: auto;
 	}
 	
 	&__table {
 		width: 100%;
 		border-collapse: collapse;
+		margin-top: 20px;
 
 		th,
 		td {
@@ -185,9 +218,12 @@
 		}
 		
 		th {
-			font-size: 20px;
-			line-height: 42px;
+			font-size: 18px;
+			line-height: 24px;
 			font-weight: 500;
+			white-space: nowrap;
+			padding-right: 5px;
+			padding-left: 5px;
 
 			span {
 				font-size: 16px;
@@ -195,9 +231,14 @@
 		}
 
 		td {
-			&:not(:first-child) {
+			+ td {
 				text-align: center;
+				border-left: 1px solid $gray-e6;
 			}
+		}
+
+		th + th {
+			border-left: 1px solid $gray-e6;
 		}
 
 		thead tr {
@@ -283,9 +324,14 @@
 }
 
 .calculate {
-	margin-top: 205px;
-	padding: 30px 0 75px;
+	margin-top: 140px;
+	padding: 30px 0;
 	background-color: #f4f6f9;
+
+	@media (min-width: $dMin) {
+		margin-top: 205px;
+		padding: 30px 0 75px;
+	}
 
 	&__container {
 		position: relative;
@@ -297,15 +343,31 @@
 		top: -156px;
 	}
 
-	&__form {
+	&__form-inputs {
 		display: flex;
-		max-width: 835px;
-		margin: 0 -15px;
+		flex-direction: column;
+
+		@media (min-width: $tMin) {
+			flex-direction: row;
+			margin: 0 -15px;
+		}
+
+		@media (min-width: $dMin) {
+			max-width: 100%;
+		}
+
+		@media (min-width: $d1280) {
+			max-width: 835px;
+		}
 	}
 
 	&__column {
-		width: calc(50% - 30px);
-		margin: 0 15px;
+		width: 100%;
+
+		@media (min-width: $tMin) {
+			width: calc(50% - 30px);
+			margin: 0 15px;
+		}
 	}
 
 	&__input-row {
@@ -316,11 +378,11 @@
 		&:nth-child(3),
 		&:nth-child(4){
 			margin-top: 14px;
-		}
 
-		&:nth-child(3) {
 			.checkbox-label {
-				padding-top: 33px;
+				@media (min-width: $tMin) {
+					padding-top: 33px;
+				}
 			}
 		}
 
@@ -346,9 +408,16 @@
 	&__request {
 		line-height: 42px;
 		color: $gray-e9;
-		position: absolute;
-		right: 0;
-		top: -77px;
+		text-align: center;
+		margin-top: 15px;
+
+		@media (min-width: $d1280) {
+			position: absolute;
+			right: 0;
+			top: -77px;
+			text-align: left;
+			margin-top: 0;
+		}
 
 		img {
 			position: absolute;
@@ -366,14 +435,20 @@
 	}
 
 	&__bg {
+		display: none;
 		position: absolute;
 		top: 0;
 		left: 0;
 		right: 0;
 		bottom: 0;
+
+		@media (min-width: $d1280) {
+			display: block;
+		}
 	}
 
 	&__block {
+		display: inline-block;
 		position: relative;
 		z-index: 1;
 		padding: 24px 40px 42px;
@@ -452,30 +527,51 @@
 		color: $red;
 		cursor: pointer;
 		border-bottom: 1px dashed $red;
-		position: relative;
-		left: 50%;
-		transform: translateX(-50%);
+
+		@media (min-width: $d1280) {
+			position: relative;
+			left: 50%;
+			transform: translateX(-50%);
+		}
 	}
 }
 
 .documentation {
-	margin-top: 74px;
+	margin-top: 30px;
+
+	@media (min-width: $dMin) {
+		margin-top: 74px;
+	}
 
 	&__files {
 		display: flex;
 		flex-wrap: wrap;
-		margin: 44px -20px 0;
+		margin-top: 24px;
+
+		@media (min-width: $tMin) {
+			margin: 44px -20px 0;
+		}
 	}
 
 	&__link {
 		display: flex;
-		width: calc(33.3333% - 40px);
-		margin: 0 20px 44px;
+		width: 100%;
 
 		&:hover {
 			.documentation__download {
 				border-bottom-color: transparent;
 			}
+		}
+
+		margin-bottom: 15px;
+
+		@media (min-width: $tMin) {
+			width: calc(50% - 40px);
+			margin: 0 20px 44px;
+		}
+
+		@media (min-width: $dMin) {
+			width: calc(33.3333% - 40px);
 		}
 
 		svg {
@@ -530,6 +626,110 @@
 
 	&__title {
 		color: $gray-e9;
+	}
+
+	&__scheme {
+		position: relative;
+		margin-top: 38px;
+		margin-left: 125px;
+	}
+
+	&__row {
+		display: flex;
+
+		&:first-child {
+			.work {
+				&__scheme-item + .work__scheme-item {
+					margin-left: 110px;
+
+					.work__circle {
+						position: relative;
+
+						&::before {
+							content: '';
+							display: block;
+							position: absolute;
+							top: 55px;
+							left: -255px;
+							width: 225px;
+							height: 2px;
+							background: url("../img/work/line-medium.png") no-repeat;
+						}
+					}
+				}
+			}
+		}
+
+		&:last-child {
+			margin-top: 160px;
+			padding-left: 20px;
+
+			.work__scheme-item + .work__scheme-item {
+				margin-left: 124px;
+
+				.work__circle {
+					position: relative;
+
+					&::before {
+						content: '';
+						display: block;
+						position: absolute;
+						top: 55px;
+						left: -175px;
+						width: 143px;
+						height: 2px;
+						background: url("../img/work/line-medium.png") no-repeat;
+					}
+				}
+			}
+		}
+	}
+
+	&__scheme-item {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		text-align: center;
+	}
+
+	&__circle {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		width: 110px;
+		height: 110px;
+		border: 6px solid #e72c31;
+		border-radius: 50%;
+		position: relative;
+
+		img {
+			width: 50%;
+		}
+	}
+
+	&__num {
+		padding: 10px;
+		font-weight: 700;
+		color: $white;
+		position: absolute;
+		top: 0;
+		left: -16px;
+		border-radius: 50%;
+		background-color: #e72c31;
+	}
+
+	&__step-title {
+		font-size: 24px;
+		line-height: 24px;
+		color: $gray-e9;
+		margin-top: 10px;
+	}
+
+	&__step-text {
+		line-height: 22px;
+		color: $gray-e9;
+		margin-top: 10px;
+		max-width: 280px;
 	}
 }
 
@@ -637,26 +837,55 @@
 }
 
 .about {
-	padding: 74px 0;
-	margin-top: 120px;
+	padding: 44px 0;
+	margin-top: 60px;
 	background-color: #f4f6f9;
+
+	@media (min-width: $dMin) {
+		padding: 74px 0;
+		margin-top: 120px;
+	}
 
 	&__block {
 		display: flex;
-		margin: 30px -25px 0;
+		flex-direction: column;
+		align-items: center;
+		margin-top: 25px;
+
+		@media (min-width: $tMin) {
+			margin-top: 0;
+		}
+
+		@media (min-width: $dMin) {
+			flex-direction: row;
+			margin: 30px -25px 0;
+		}
 	}
 
 	&__img-group {
+		display: none;
 		position: relative;
-		width: calc(44% - 50px);
-		margin: 0 25px;
+		width: 30%;
 		padding-top: 75px;
 		overflow: hidden;
+
+		@media (min-width: $tMin) {
+			display: block;
+		}
+
+		@media (min-width: $dMin) {
+			width: calc(44% - 50px);
+			margin: 0 25px;
+		}
 	}
 
 	&__content {
-		width: calc(56% - 50px);
-		margin: 0 25px;
+		width: 100%;
+
+		@media (min-width: $dMin) {
+			width: calc(56% - 50px);
+			margin: 0 25px;
+		}
 	}
 
 	&__pattern {
@@ -678,30 +907,52 @@
 
 	&__car {
 		width: 100%;
-		height: 100%;
 		position: relative;
 	}
 
 	&__title {
-		font-size: 28px;
+		font-size: 20px;
 		font-weight: 600;
 		line-height: 24px;
 		text-transform: uppercase;
+
+		@media (min-width: $tMin) {
+			font-size: 28px;
+		}
 	}
 
 	&__description {
-		margin-top: 24px;
+		margin-top: 14px;
 		line-height: 22px;
 
+		@media (min-width: $tMin) {
+			margin-top: 24px;
+		}
+
 		p + p {
-			margin-top: 25px;
+			margin-top: 15px;
+
+			@media (min-width: $tMin) {
+				margin-top: 25px;
+			}
 		}
 	}
 
 	&__details {
 		display: flex;
+		flex-direction: column;
 		justify-content: space-between;
 		margin-top: 34px;
+		max-width: 300px;
+
+		@media (min-width: $tMin) {
+			flex-direction: row;
+			margin-top: 34px;
+		}
+
+		@media (min-width: $dMin) {
+			max-width: 100%;
+		}
 	}
 
 	&__details-col {
@@ -709,6 +960,11 @@
 			max-width: 158px;
 			width: 100%;
 			margin-right: 50px;
+			margin-bottom: 5px;
+
+			@media (min-width: $tMin) {
+				margin-bottom: 0;
+			}
 		}
 
 		p + p {
@@ -906,7 +1162,7 @@
 			margin-right: 10px;
 		}
 
-		span {
+		span, a {
 			font-size: 18px;
 			color: $white;
 			line-height: 37px;
@@ -916,11 +1172,14 @@
 	&__phone {
 		display: flex;
 		align-items: center;
-		font-size: 24px;
-		line-height: 32px;
-		color: $white;
 		margin-left: 18px;
 		margin-top: 10px;
+
+		a {
+			font-size: 24px;
+			line-height: 32px;
+			color: $white;
+		}
 
 		svg {
 			fill: $red;
